--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^6.11.4",
     "mongose": "^0.0.2-security",
     "next": "^13.4.10",
+    "nodemailer": "^6.9.14",
     "prop-types": "15.7.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
